<resources>
    <string name="app_name">UETWorks</string>

    <string name="title_home">Home</string>
    <string name="title_status">Status</string>
    <string name="title_profile">Profile</string>
    <string name="title_notification">Notification</string>
    <string name="title_message">Message</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Thông tin cá nhân</string>
    <string name="update">Cập nhật</string>
    <string name="name">Họ và tên</string>
    <string name="address">Địa chỉ</string>
    <string name="dob">Ngày sinh</string>
    <string name="email">Email</string>
    <string name="phone_bumber">Số điện thoại</string>
    <string name="skype">Skype</string>
    <string name="hobby">Sở thích</string>
    <string name="className">Lớp</string>
    <string name="skill">Kĩ năng chuyên môn</string>
    <string name="foreignLanguage">Ngoại ngữ</string>
    <string name="logout">Đăng xuất</string>
    <string name="changePass">Đổi mật khẩu</string>
    <string name="enrol">Đăng ký</string>
    <string name="other_name">Tên công ty</string>
    <string name="other_address">Địa chỉ</string>
    <string name="other_email">Email liên hệ</string>
    <string name="other_phone">Số điện thoại</string>
    <string name="search_other">Tìm công ty ngoài</string>
    <string name="search_partner">Tìm đối tác</string>
    <string name="cancel">Hủy</string>
    <string name="no_message">Không có thông báo mới !</string>

</resources>
